Añadimos elementos menu

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
     <div class="menu-nav">
       <div class="logo"></div>
+      <div class="elementos"></div>
     </div>
 
     <div class="body-content">
